k8s/applications/portkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portkey-gateway
  namespace: portkey
  labels:
    app.kubernetes.io/version: "1.12.1"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: portkey-gateway
  ports:
    - name: http
      port: 8787
      targetPort: 8787
      protocol: TCP
      appProtocol: http
